# QAT_pipeline

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.deps  README.md  __init__.py  bert_train.sbatch  pixi.toml  pyproject.toml  train_bert.py
.github/workflows/: build.yml
configs/: cluster.yaml  local.yaml
grace/: __init__.py  edit_test.py  fold_grace.py  grace_helpers.py  locality_test.py
grace/eval_data/: flipped_FP32.jsonl  summary_FP32.json
notebooks/: mlp_quant_test.ipynb  nlp_quant_test.ipynb  qat_test.ipynb  quant_experiments.py  quantization_consolidated.ipynb  visualize_error.ipynb  weight_activation_test.ipynb
scripts/: bootstrap.sh
src/: check_device.py  quant_eval.py  quant_experiments.py  quant_utils.py  train.py
