[project]
name = "qat-pipeline"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
  "numpy",
  "pandas",
  "pytest",
  "nltk",
  "torch",          # Mac: CPU/MPS; Linux in Docker: CUDA wheels via PIP_INDEX_URL
  "torchvision",
  "torchaudio",
  "transformers",
  "datasets",
  "einops",
  "higher",
  "hydra-core",
  "wandb",
  "jsonlines",
  "sentencepiece",
  "matplotlib",
  "scikit-learn",
]
