[project]
name = "qat-pipeline"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
  "numpy",
  "pandas",
  "nltk",
  "torch", # Mac: CPU/MPS; Linux in Docker: CUDA wheels via PIP_INDEX_URL
  "torchvision",
  "transformers",
  "datasets",
  "higher",
  "jsonlines",
  "sentencepiece",
  "scikit-learn",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "pytest>=8.4.2",
]
