[project]
name = "qat-pipeline"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
  "numpy",
  "pandas",
  "nltk",
  "torch", # Mac: CPU/MPS; Linux in Docker: CUDA wheels via PIP_INDEX_URL
  "torchvision",
  "transformers==4.52.0",
  "datasets",
  "higher",
  "jsonlines",
  "sentencepiece",
  "scikit-learn",
  "torchao>=0.13.0",
  "onnxruntime>=1.18",
  "onnx>=1.19.0",
  "onnxscript>=0.5.1",
  "src",
  "wandb>=0.22.0",
  "ipykernel>=6.30.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "pytest>=8.4.2",
]

[tool.uv.sources]
src = { git = "https://github.com/Thartvigsen/GRACE.git", rev = "main" }
